--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
+    "react-bootstrap-drawer": "^1.0.0",
+    "react-client-session": "0.0.7",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.33.1",
+    "react-preload-image": "^1.0.7",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
