--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "PORT=3005 react-scripts start",
+    "start": "react-scripts start",
+    "start-prod": "PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
